@@ -1,3 +1,8 @@
+2008-10-09  Scott Ellington <scott.ellington@gmail.com> 
+
+	* MapRenderer.cs: switch from GL_LINES to GL_LINE_STRIP
+	* ProjFourWrapper.cs: add ctor
+
 2008-10-08  Scott Ellington <scott.ellington@gmail.com> 
 
 	
